--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "e-shop",
 	"version": "0.1.0",
-	"proxy": "http://localhost:4000",
 	"private": true,
 	"dependencies": {
 		"@emotion/react": "^11.9.3",
@@ -15,6 +14,7 @@
 		"antd": "^4.19.2",
 		"axios": "^0.27.2",
 		"dayjs": "^1.11.2",
+		"http-proxy-middleware": "^2.0.6",
 		"js-cookie": "^3.0.1",
 		"node-sass": "^7.0.1",
 		"react": "^17.0.2",
@@ -22,7 +22,7 @@
 		"react-redux": "^7.2.6",
 		"react-router": "^6.2.2",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "5.0.0",
+		"react-scripts": "4.0.3",
 		"redux": "^4.1.2",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.4.1",
