--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"express": "^4.18.1",
 		"express-validator": "^6.14.1",
 		"gravatar": "^1.8.2",
+		"http-proxy-middleware": "^2.0.6",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.5",
 		"multer": "^1.4.5-lts.1",
